--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
     "symfony/yaml": "^3.3",
+    "symfony/process": "~2.1||~4.1.0",
     "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
@@ -28,7 +29,6 @@
     "phpunit/php-code-coverage": "^5.2",
     "phpunit/phpunit": "^6.2",
     "squizlabs/php_codesniffer": " ^3.0",
-    "symfony/process": "^3.4",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2"
   },
