--- a/composer.json
+++ b/composer.json
@@ -74,29 +74,31 @@
         ".magento.env.yaml.dist"
       ],
       [
-        "dist/Makefile",
-        "Makefile"
+        "dist/docker-sync.yml",
+        "docker-sync.yml"
       ],
       [
         "dist/docker/mnt",
-        "docker/mnt"
+        ".docker/mnt"
       ],
       [
         "dist/docker/tmp",
-        "docker/tmp"
+        ".docker/tmp"
       ],
       [
         "dist/docker/mysql",
-        "docker/mysql"
+        ".docker/mysql"
       ],
       [
-        "dist/docker/README.md",
-        "docker/README.md"
-      ],
-      [
-        "dist/docker-sync.yml",
-        "docker-sync.yml"
+        "dist/docker/bin/docker",
+        "bin/docker"
       ]
+    ],
+    "chmod": [
+      {
+        "mask": "0755",
+        "path": "bin/docker"
+      }
     ]
   }
 }
