--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,29 @@ env:
     - TEST_SUITE=static-unit XDEBUG=true
     - TEST_SUITE=integration
     - TEST_SUITE=functional
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=1
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=2
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
 matrix:
   exclude:
     - php: '7.0'
       env: TEST_SUITE=integration
+    - php: '7.0'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+    - php: '7.0'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+    - php: '7.0'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+
     - php: '7.1'
       env: TEST_SUITE=integration
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
 install: composer update -n --no-suggest
 
@@ -37,6 +53,7 @@ before_script:
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./.docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./.docker/global.env; fi;
   - sudo /etc/init.d/mysql stop
+  - ./tests/travis/prepare_functional_parallel.sh
 
 script:
   - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
