--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ matrix:
     - php: '7.1'
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
-    - php: 7.2
+    - php: '7.2'
       env: TEST_SUITE=functional
 
 install: composer update -n --no-suggest
