--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
-    "symfony/yaml": "^3.3",
+    "symfony/yaml": "^3.3||^4.0",
     "symfony/process": "~2.1||~4.1.0",
     "twig/twig": "^1.0||^2.0"
   },
@@ -28,9 +28,12 @@
     "phpmd/phpmd": "@stable",
     "phpunit/php-code-coverage": "^5.2",
     "phpunit/phpunit": "^6.2",
-    "squizlabs/php_codesniffer": " ^3.0",
+    "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2"
+  },
+  "conflict": {
+    "nesbot/carbon": ">=1.38 <2.0"
   },
   "replace": {
     "magento/ece-patches": "*",
