MAGECLOUD-3559: [Spike] Check how mutagen.io can improve performance of cloud docker environment

--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,10 @@
         "docker-sync.yml"
       ],
       [
+        "dist/mutagen.sh",
+        "mutagen.sh"
+      ],
+      [
         "dist/docker/mnt",
         ".docker/mnt"
       ],
