--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,9 @@ matrix:
     - php: '7.2'
       env: TEST_SUITE=functional
 
-install: composer update -n --no-suggest
+install:
+  - echo "{\"http-basic\":{\"repo.magento.com\":{\"username\":\"${REPO_USERNAME}\",\"password\":\"${REPO_PASSWORD}\"}}}" > auth.json
+  - composer update -n --no-suggest
 
 before_script:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./.docker/composer.env
