--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "php": "^7.0",
     "ext-PDO": "*",
     "ext-json": "*",
+    "ext-sockets": "*",
     "composer/composer": "@stable",
     "composer/semver": "^1.4",
     "graylog2/gelf-php": "^1.4.2",
@@ -19,8 +20,8 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
-    "symfony/yaml": "^3.3||^4.0",
     "symfony/process": "~2.1||~4.1.0",
+    "symfony/yaml": "^3.3||^4.0",
     "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
@@ -59,12 +60,16 @@
   },
   "scripts": {
     "test": [
-      "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
-      "phpmd src xml tests/static/phpmd-ruleset.xml",
-      "phpunit --configuration tests/unit",
-      "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml"
+      "@phpcs",
+      "@phpmd",
+      "@phpunit",
+      "@coverage"
     ],
-    "test-coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage"
+    "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
+    "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
+    "phpunit": "phpunit --configuration tests/unit",
+    "coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
+    "coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage"
   },
   "config": {
     "sort-packages": true
