--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
   "type": "magento2-component",
   "version": "2002.0.19",
   "license": "OSL-3.0",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://repo.magento.com/"
+    }
+  ],
   "require": {
     "php": "^7.0",
     "ext-PDO": "*",
@@ -22,7 +28,8 @@
     "symfony/console": "^2.6||^4.0",
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
-    "twig/twig": "^1.0||^2.0"
+    "twig/twig": "^1.0||^2.0",
+    "magento/magento-cloud-components": "^1.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
