--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "phpunit/phpunit": "^6.2",
     "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
-    "consolidation/robo": "^1.2"
+    "consolidation/robo": "^1.2",
+    "phpstan/phpstan": "@stable"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
@@ -67,11 +68,13 @@
   },
   "scripts": {
     "test": [
+      "@phpstan",
       "@phpcs",
       "@phpmd",
       "@phpunit",
       "@coverage"
     ],
+    "phpstan": "phpstan analyse -l 4 -c tests/static/phpstan.dist src",
     "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
