--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
       "@phpunit",
       "@coverage"
     ],
-    "phpstan": "phpstan analyse -l 4 -c tests/static/phpstan.dist src",
+    "phpstan": "phpstan analyse -l 4 -c ./tests/static/phpstan.neon src",
     "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
