--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,15 @@
       "@phpunit",
       "@coverage"
     ],
+    "test7.0": [
+      "@phpstan7.0",
+      "@phpcs",
+      "@phpmd",
+      "@phpunit",
+      "@coverage"
+    ],
     "phpstan": "phpstan analyse -l 5 -c tests/static/phpstan.neon src",
+    "phpstan7.0": "phpstan analyse -l 1 -c tests/static/phpstan7.0.neon src",
     "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
