MAGECLOUD-3578: Add PHPStan to Static Tests set

--- a/tests/static/phpstan7.0.neon
+++ b/tests/static/phpstan7.0.neon
@@ -1,3 +1,6 @@
 parameters:
-	excludes_analyse:
-		- %currentWorkingDirectory%/src/Test/*
+    level: 1
+    paths:
+        - src
+    excludes_analyse:
+        - %currentWorkingDirectory%/src/Test/*
