--- a/composer.json
+++ b/composer.json
@@ -81,8 +81,8 @@
       "@phpunit",
       "@coverage"
     ],
-    "phpstan": "phpstan analyse -l 5 -c tests/static/phpstan.neon src",
-    "phpstan7.0": "phpstan analyse -l 1 -c tests/static/phpstan7.0.neon src",
+    "phpstan": "phpstan analyse -c tests/static/phpstan.neon",
+    "phpstan7.0": "phpstan analyse -c tests/static/phpstan7.0.neon",
     "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
