--- a/tests/static/phpstan.neon
+++ b/tests/static/phpstan.neon
@@ -1,6 +1,9 @@
 parameters:
-	excludes_analyse:
-		- %currentWorkingDirectory%/src/Test/*
-	ignoreErrors:
-		- message: "#Strict comparison using === between bool and null will always evaluate to false.#"
-		  path: %currentWorkingDirectory%/src/Filesystem/Driver/File.php
+    level: 5
+    paths:
+        - src
+    excludes_analyse:
+        - %currentWorkingDirectory%/src/Test/*
+    ignoreErrors:
+        - message: "#Strict comparison using === between bool and null will always evaluate to false.#"
+          path: %currentWorkingDirectory%/src/Filesystem/Driver/File.php
