--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
       "@coverage"
     ],
     "phpstan": "phpstan analyse -c tests/static/phpstan.neon",
-    "phpstan7.0": "phpstan analyse -c tests/static/phpstan7.0.neon",
+    "phpstan7.0": "phpstan analyse -l 1 -c tests/static/phpstan7.0.neon src",
     "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
