--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,10 @@
     "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
     "phpunit": "phpunit --configuration tests/unit",
     "coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
-    "coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage"
+    "coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
+    "clear-components-autoload": "composer remove magento/magento-cloud-components --no-update",
+    "pre-install-cmd": "@clear-components-autoload",
+    "pre-update-cmd": "@clear-components-autoload"
   },
   "config": {
     "sort-packages": true
