--- a/tests/static/phpstan.neon
+++ b/tests/static/phpstan.neon
@@ -5,5 +5,7 @@ parameters:
     excludes_analyse:
         - %currentWorkingDirectory%/src/Test/*
     ignoreErrors:
+        - message: "#.*ComponentRegistrar.*#"
+          path: %currentWorkingDirectory%/src/StaticContent/ThemeResolver.php
         - message: "#Strict comparison using === between bool and null will always evaluate to false.#"
           path: %currentWorkingDirectory%/src/Filesystem/Driver/File.php
