MAGECLOUD-4004: Move Docker-related functionality to separate package

--- a/tests/static/phpstan.neon
+++ b/tests/static/phpstan.neon
@@ -4,6 +4,7 @@ parameters:
         - src
     excludes_analyse:
         - %currentWorkingDirectory%/src/Test/*
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
         - message: "#.*ComponentRegistrar.*#"
           path: %currentWorkingDirectory%/src/StaticContent/ThemeResolver.php
