--- a/tests/static/phpstan7.0.neon
+++ b/tests/static/phpstan7.0.neon
@@ -1,4 +1,5 @@
 parameters:
+    reportUnmatchedIgnoredErrors: false
     excludes_analyse:
         - %currentWorkingDirectory%/src/Test/*
     ignoreErrors:
