--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,8 @@ matrix:
 install:
   - composer config http-basic.repo.magento.com ${REPO_USERNAME} ${REPO_PASSWORD}
   - composer config github-oauth.github.com ${GITHUB_TOKEN}
-  - composer config repositories.mcc git git@github.com:magento/magento-cloud-components.git
-  - composer require "magento/magento-cloud-components:${MCC_VERSION}" --no-update
-  - composer config repositories.mcd git git@github.com:magento/magento-cloud-docker.git
-  - composer require "magento/magento-cloud-docker:${MCD_VERSION}" --no-update
+  - if [ -n "${MCC_VERSION}" ]; then composer config repositories.mcc git git@github.com:magento/magento-cloud-components.git && composer require "magento/magento-cloud-components:${MCC_VERSION}" --no-update; fi;
+  - if [ -n "${MCD_VERSION}" ]; then composer config repositories.mcd git git@github.com:magento/magento-cloud-docker.git && composer require "magento/magento-cloud-docker:${MCD_VERSION}" --no-update; fi;
   - composer update -n --no-suggest
 
 before_script:
