MAGECLOUD-4004: Move Docker-related functionality to separate package

--- a/tests/static/phpstan.neon
+++ b/tests/static/phpstan.neon
@@ -10,3 +10,5 @@ parameters:
           path: %currentWorkingDirectory%/src/StaticContent/ThemeResolver.php
         - message: "#Strict comparison using === between bool and null will always evaluate to false.#"
           path: %currentWorkingDirectory%/src/Filesystem/Driver/File.php
+        - message: "#InputInterface to string#"
+          path: %currentWorkingDirectory%/src/Command/Docker/Build.php
