--- a/tests/static/phpstan7.0.neon
+++ b/tests/static/phpstan7.0.neon
@@ -4,3 +4,4 @@ parameters:
         - %currentWorkingDirectory%/src/Test/*
     ignoreErrors:
         - "#.*ComponentRegistrar not found.#"
+        - "#InputInterface to string#"
