--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ matrix:
       env: TEST_SUITE=functional
 
 install:
+  - if [ $TRAVIS_SECURE_ENV_VARS == "false" ]; then composer remove magento/magento-cloud-components --no-update; fi;
   - composer config http-basic.repo.magento.com ${REPO_USERNAME} ${REPO_PASSWORD}
   - composer update -n --no-suggest
 
@@ -62,7 +63,7 @@ before_script:
 
 script:
   - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
-  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi
-  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
 
 after_failure: docker ps -s
