--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ php:
   - '7.0'
   - '7.1'
   - '7.2'
+  - '7.3'
 
 env:
   matrix:
@@ -47,6 +48,9 @@ matrix:
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
     - php: '7.2'
+      env: TEST_SUITE=functional
+
+    - php: '7.3'
       env: TEST_SUITE=functional
 
 install:
