--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
-    "phpstan/phpstan": "^0.8"
+    "phpstan/phpstan": "@stable"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
