--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "illuminate/config": "^5.5",
     "illuminate/container": "^5.5",
     "illuminate/contracts": "^5.5",
+    "magento/magento-cloud-components": "^1.0",
+    "magento/magento-cloud-docker": "^1.0",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
@@ -29,8 +31,7 @@
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
     "twig/twig": "^1.0||^2.0",
-    "magento/magento-cloud-components": "^1.0",
-    "magento/magento-cloud-docker": "^1.0"
+
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
@@ -40,7 +41,7 @@
     "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
-    "phpstan/phpstan": "^0.8"
+    "phpstan/phpstan": "@stable"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
