--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,15 @@
     "illuminate/config": "^5.5",
     "illuminate/container": "^5.5",
     "illuminate/contracts": "^5.5",
+    "magento/magento-cloud-components": "^1.0",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
+    "symfony/dependency-injection": "^4.3",
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
-    "twig/twig": "^1.0||^2.0",
-    "magento/magento-cloud-components": "^1.0"
+    "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
