--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   },
   "require": {
-    "php": "^7.0",
+    "php": "^7.1",
     "ext-PDO": "*",
     "ext-json": "*",
     "ext-sockets": "*",
@@ -26,11 +26,11 @@
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
-    "symfony/console": "^2.6||^4.0",
-    "symfony/process": "~2.1||~4.1.0",
+    "symfony/console": "^4.0",
+    "symfony/process": "^4.1",
     "symfony/serializer": "^4.2",
-    "symfony/yaml": "^3.3||^4.0",
-    "twig/twig": "^1.0||^2.0"
+    "symfony/yaml": "^4.0",
+    "twig/twig": "^2.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
@@ -40,7 +40,7 @@
     "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
-    "phpstan/phpstan": "@stable"
+    "phpstan/phpstan": "^0.10"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
