--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,14 @@
     "twig/twig": "^2.0"
   },
   "require-dev": {
-    "php-mock/php-mock-phpunit": "^2.0",
-    "phpmd/phpmd": "@stable",
-    "phpunit/php-code-coverage": "^5.2",
-    "phpunit/phpunit": "^6.2",
-    "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
-    "phpstan/phpstan": "^0.10"
+    "php-mock/php-mock-phpunit": "^2.0",
+    "phpmd/phpmd": "@stable",
+    "phpstan/phpstan": "^0.11",
+    "phpunit/php-code-coverage": "^5.2",
+    "phpunit/phpunit": "^6.2",
+    "squizlabs/php_codesniffer": "^3.0"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
