--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     "ext-PDO": "*",
     "ext-json": "*",
     "ext-sockets": "*",
-    "composer/composer": "@stable",
+    "composer/composer": "^1.4",
     "composer/semver": "^1.4",
     "graylog2/gelf-php": "^1.4.2",
     "guzzlehttp/guzzle": "^6.2",
-    "illuminate/config": "^5.5",
-    "illuminate/container": "^5.5",
-    "illuminate/contracts": "^5.5",
+    "illuminate/config": "^5.6",
+    "illuminate/container": "^5.6",
+    "illuminate/contracts": "^5.6",
     "magento/magento-cloud-components": "^1.0",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
