--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "symfony/console": "^2.6||^4.0",
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
-    "twig/twig": "^1.0||^2.0",
+    "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
