--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,15 @@
     "illuminate/config": "^5.5",
     "illuminate/container": "^5.5",
     "illuminate/contracts": "^5.5",
+    "magento/magento-cloud-components": "^1.0.1",
+    "magento/magento-cloud-docker": "^1.0",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
-    "twig/twig": "^1.0||^2.0",
-    "magento/magento-cloud-components": "^1.0.1"
+    "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
@@ -101,37 +102,7 @@
       [
         "dist/.magento.env.yaml",
         ".magento.env.yaml.dist"
-      ],
-      [
-        "dist/docker-sync.yml",
-        "docker-sync.yml"
-      ],
-      [
-        "dist/mutagen.sh",
-        "mutagen.sh"
-      ],
-      [
-        "dist/docker/mnt",
-        ".docker/mnt"
-      ],
-      [
-        "dist/docker/tmp",
-        ".docker/tmp"
-      ],
-      [
-        "dist/docker/mysql",
-        ".docker/mysql"
-      ],
-      [
-        "dist/docker/bin/docker",
-        "bin/docker"
       ]
-    ],
-    "chmod": [
-      {
-        "mask": "0755",
-        "path": "bin/docker"
-      }
     ]
   }
 }
