--- a/tests/static/phpstan.neon
+++ b/tests/static/phpstan.neon
@@ -4,8 +4,11 @@ parameters:
         - src
     excludes_analyse:
         - %currentWorkingDirectory%/src/Test/*
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
         - message: "#.*ComponentRegistrar.*#"
           path: %currentWorkingDirectory%/src/StaticContent/ThemeResolver.php
         - message: "#Strict comparison using === between bool and null will always evaluate to false.#"
           path: %currentWorkingDirectory%/src/Filesystem/Driver/File.php
+        - message: "#InputInterface to string#"
+          path: %currentWorkingDirectory%/src/Command/Docker/Build.php
