--- a/tests/static/phpstan7.0.neon
+++ b/tests/static/phpstan7.0.neon
@@ -1,5 +1,7 @@
 parameters:
+    reportUnmatchedIgnoredErrors: false
     excludes_analyse:
         - %currentWorkingDirectory%/src/Test/*
     ignoreErrors:
         - "#.*ComponentRegistrar not found.#"
+        - "#InputInterface to string#"
