MAGECLOUD-4242: Refactor ece-tools functional tests

--- a/.docker/global.env
+++ b/.docker/global.env
@@ -3,4 +3,4 @@ PHP_MEMORY_LIMIT=2048M
 DEBUG=false
 ENABLE_SENDMAIL=false
 UPLOAD_MAX_FILESIZE=64M
-MAGENTO_ROOT=/var/www/magento
+MAGENTO_ROOT=/app
