--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
-    "symfony/console": "^4.0",
-    "symfony/process": "^4.1",
+    "symfony/console": "^2.3||^4.0",
+    "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^4.2",
     "symfony/yaml": "^4.0",
     "twig/twig": "^2.0"
