--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^4.2",
     "symfony/yaml": "^4.0",
-    "twig/twig": "^2.0"
+    "twig/twig": "^1.0||^2.0"
   },
   "suggest": {
     "magento/magento-cloud-docker": "^1.0"
