MAGECLOUD-4242: Refactor ece-tools functional tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,49 +14,49 @@ services:
 
 language: php
 php:
-  - '7.0'
-  - '7.1'
+#  - '7.0'
+#  - '7.1'
   - '7.2'
 
 env:
   matrix:
-    - TEST_SUITE=static-unit XDEBUG=true
-    - TEST_SUITE=integration
-    - TEST_SUITE=functional
-    - TEST_SUITE=functional FUNCTIONAL_INDEX=1
-    - TEST_SUITE=functional FUNCTIONAL_INDEX=2
+#    - TEST_SUITE=static-unit XDEBUG=true
+#    - TEST_SUITE=integration
+#    - TEST_SUITE=functional
+#    - TEST_SUITE=functional FUNCTIONAL_INDEX=1
+#    - TEST_SUITE=functional FUNCTIONAL_INDEX=2
     - TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
-matrix:
-  exclude:
-    - php: '7.0'
-      env: TEST_SUITE=integration
-    - php: '7.0'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
-    - php: '7.0'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
-    - php: '7.0'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+#matrix:
+#  exclude:
+#    - php: '7.0'
+#      env: TEST_SUITE=integration
+#    - php: '7.0'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+#    - php: '7.0'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+#    - php: '7.0'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+#
+#    - php: '7.1'
+#      env: TEST_SUITE=integration
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+#
+#    - php: '7.2'
+#      env: TEST_SUITE=functional
 
-    - php: '7.1'
-      env: TEST_SUITE=integration
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
-
-    - php: '7.2'
-      env: TEST_SUITE=functional
-
-before_install:
-  - sudo apt update -y
-  - sudo apt install --only-upgrade docker-ce -y
-  - sudo rm -f /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+#before_install:
+#  - sudo apt update -y
+#  - sudo apt install --only-upgrade docker-ce -y
+#  - sudo rm -f /usr/local/bin/docker-compose
+#  - curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` > docker-compose
+#  - chmod +x docker-compose
+#  - sudo mv docker-compose /usr/local/bin
 
 install:
   - if [ $TRAVIS_SECURE_ENV_VARS != "true" ]; then composer remove magento/magento-cloud-components --no-update; fi;
@@ -77,8 +77,10 @@ before_script:
   - ./tests/travis/prepare_functional_parallel.sh
 
 script:
-  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
-  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
-  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
+  - docker-compose up -d
+  - docker-compose run deploy bash -c "mysql -hdb.magento2.docker -umagento2 -pmagento2"
+#  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
+#  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
+#  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
 
 after_failure: docker ps -s
