--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,7 @@ before_script:
 
 script:
   - docker-compose up -d
+  - sleep 20s
   - docker-compose run deploy bash -c "mysql -hdb.magento2.docker -umagento2 -pmagento2"
   - docker-compose run deploy bash -c "mysql -hdb -umagento2 -pmagento2"
 #  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
