--- a/tests/functional/configuration.dist.yml
+++ b/tests/functional/configuration.dist.yml
@@ -2,7 +2,7 @@ Magento:
   docker:
     settings:
       db:
-        host: 'db'
+        host: 'db.magento2.docker'
         port: '3306'
         username: 'magento2'
         password: 'magento2'
@@ -11,9 +11,9 @@ Magento:
         url: 'https://github.com/magento/magento-cloud'
         branch: 'master'
       system:
-          magento_dir: '/var/www/magento'
-          ece_dir: '/var/www/ece-tools'
+          magento_dir: '/app'
+          ece_dir: '/ece-tools'
       env:
         url:
-          base: 'http://web/'
-          secure_base: 'https://web/'
+          base: 'http://magento2.docker/'
+          secure_base: 'https://magento2.docker/'
