--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-dist: trusty
-sudo: required
+dist: bionic
 
 addons:
   hosts:
@@ -13,8 +12,8 @@ services:
 
 language: php
 php:
-  - '7.1'
-  - '7.2'
+#  - '7.1'
+#  - '7.2'
   - '7.3'
 
 env:
@@ -28,17 +27,17 @@ env:
 
 matrix:
   exclude:
-    - php: '7.1'
-      env: TEST_SUITE=integration
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
-    - php: '7.1'
-      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
-
-    - php: '7.2'
-      env: TEST_SUITE=functional
+#    - php: '7.1'
+#      env: TEST_SUITE=integration
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+#    - php: '7.1'
+#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+#
+#    - php: '7.2'
+#      env: TEST_SUITE=functional
 
     - php: '7.3'
       env: TEST_SUITE=functional
@@ -56,7 +55,7 @@ before_script:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./.docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./.docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./.docker/global.env; fi;
-  - sudo /etc/init.d/mysql stop
+#  - sudo /etc/init.d/mysql stop
   - ./tests/travis/prepare_functional_parallel.sh
 
 script:
