--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ install:
   - composer update -n --no-suggest
 
 before_script:
+  - whoami
+  - echo ~
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./.docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./.docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./.docker/global.env; fi;
